src/objects/compromiso__c.object
<CustomObject>
	<fields>
        <fullName>Product_relate__c</fullName>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P. Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>compromisos</relationshipLabel>
        <relationshipName>compromisos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>compromisos</relationshipLabel>
        <relationshipName>compromisos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PE_DIVISA_Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PE_FM_PRODUCT__c</fullName>
        <formula>PE_SH_PRODUCT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Producto:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_FOR_Fecha_Vcto__c</fullName>
		<defaultValue>DATETIMEVALUE(DATE( YEAR(DATEVALUE($System.OriginDateTime)), MONTH( DATEVALUE($System.OriginDateTime )) + 2 ,  DAY( DATEVALUE($System.OriginDateTime ))))</defaultValue>
        <label>Fecha vcto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PE_NUM_Permanencia__c</fullName>
        <label>Permanencia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PE_NUM_Plazo_Vcto__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Plazo vcto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PE_SH_PRODUCT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>compromisos</relationshipLabel>
        <relationshipName>compromisos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>compromiso</label>
    <nameField>
        <label>Nombre de compromiso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>compromisos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>